--- a/environment_8h.html
+++ b/environment_8h.html
@@ -99,6 +99,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <p>Environment management static class definition.  
 <a href="#details">More...</a></p>
 <div class="textblock"><code>#include &lt;ctime&gt;</code><br />
+<code>#include &lt;string&gt;</code><br />
 </div>
 <p><a href="environment_8h_source.html">Go to the source code of this file.</a></p>
 <table class="memberdecls">
